[FIX] Adjusting Runes per Minute inputs spacing

--- a/estilos.css
+++ b/estilos.css
@@ -95,6 +95,8 @@ input {
 #minutos,
 #runas {
    width: 50%;
+   margin-left: 5px;
+   margin-right: 5px;
 }
 
 #group-runas,
